# docs/swagger.yaml
@@ -1,54 +1,6 @@
 basePath: /
 definitions:
-  handler.bankAccountRequest:
-    properties:
-      balance:
-        description: Баланс
-        type: number
-      currency:
-        description: Валюта
-        type: string
-      name:
-        description: Название
-        type: string
-    required:
-    - balance
-    - currency
-    - name
-    type: object
-  handler.loginRequest:
-    properties:
-      email:
-        description: Email пользователя
-        type: string
-      password:
-        description: Пароль пользователя
-        type: string
-    required:
-    - email
-    - password
-    type: object
-  handler.logoutRequest:
-    properties:
-      refresh_token:
-        description: Refresh токен
-        type: string
-    required:
-    - refresh_token
-    type: object
-  handler.registerRequest:
-    properties:
-      email:
-        description: Email пользователя
-        type: string
-      password:
-        description: Пароль пользователя
-        type: string
-    required:
-    - email
-    - password
-    type: object
-  repository.BankAccount:
+  account.BankAccount:
     properties:
       balance:
         description: Баланс
@@ -72,13 +24,72 @@ definitions:
         description: ID пользователя
         type: integer
     type: object
-  service.Tokens:
+  handler.bankAccountRequest:
+    properties:
+      balance:
+        description: Баланс
+        type: number
+      currency:
+        description: Валюта
+        type: string
+      name:
+        description: Название
+        type: string
+    required:
+    - balance
+    - currency
+    - name
+    type: object
+  request.BankAccountRequest:
+    properties:
+      balance:
+        type: number
+      currency:
+        type: string
+      name:
+        type: string
+    required:
+    - balance
+    - currency
+    - name
+    type: object
+  request.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  request.LogoutRequest:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
+  request.RegisterRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  response.MessageResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  response.TokensResponse:
     properties:
       access_token:
-        description: JWT access token
         type: string
       refresh_token:
-        description: JWT refresh token
         type: string
     type: object
 host: localhost:8080
@@ -98,14 +109,14 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/handler.bankAccountRequest'
+          $ref: '#/definitions/request.BankAccountRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/repository.BankAccount'
+            $ref: '#/definitions/account.BankAccount'
         "400":
           description: ошибка
           schema:
@@ -129,9 +140,9 @@ paths:
         type: integer
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/response.MessageResponse'
         "400":
           description: ошибка
           schema:
@@ -166,7 +177,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/repository.BankAccount'
+            $ref: '#/definitions/account.BankAccount'
         "400":
           description: ошибка
           schema:
@@ -190,14 +201,14 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/handler.loginRequest'
+          $ref: '#/definitions/request.LoginRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/service.Tokens'
+            $ref: '#/definitions/response.TokensResponse'
         "400":
           description: ошибка
           schema:
@@ -215,14 +226,14 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/handler.logoutRequest'
+          $ref: '#/definitions/request.LogoutRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/response.MessageResponse'
         "400":
           description: ошибка
           schema:
@@ -240,14 +251,14 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/handler.registerRequest'
+          $ref: '#/definitions/request.RegisterRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: ok
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/response.MessageResponse'
         "400":
           description: ошибка
           schema:
